# to-do-list-2-

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPRECATION.md  INTERVENTION_REQUIRED.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 26e0239a97e0_create_tables.py  432f588ad001_phase3_prepare_for_api.py  c0b3004ec4d7_add_closed_at_to_tasks.py
app/: main.py
app/api/: __init__.py  deps.py  router.py  routers.py
app/api/controller_schemas/requests/: __init__.py  project_request_schema.py  task_request_schema.py
app/api/controller_schemas/responses/: __init__.py  project_response_schema.py  task_response_schema.py
app/api/controllers/: __init__.py  projects_controller.py  tasks_controller.py
app/api/routes/: __init__.py  projects.py  tasks.py
app/cli/: console.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: session.py
app/models/: project.py  task.py
app/repositories/: project_repository.py  project_sql_repository.py  task_repository.py  task_sql_repository.py
app/schemas/: __init__.py  project.py  task.py
app/services/: project_service.py  task_service.py
src/to_do_list/: cli.py  controller.py  main.py  project.py  task.py
tests/: test_api.py
