[project]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = [
    {name = "saleh sabagh",email = "saleh4532eh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "to_do_list", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
