[project]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = [
    {name = "saleh sabagh",email = "saleh4532eh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime (>=5.5,<6.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "to_do_list", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
