[tool.poetry]
name = "to-do-list"
version = "0.1.0"
description = "Task and project manager with CLI and FastAPI Web API."
authors = ["saleh sabagh <saleh4532eh@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.2"
sqlalchemy = "^2.0.44"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.0.1"
schedule = "^1.2.2"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.6.9"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401"]

[tool.pytest.ini_options]
pythonpath = ["."]
